--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "simplesoftwareio/simple-qrcode": "^2.0",
         "werneckbh/laravel-qr-code": "^0.1.3"
     },
     "require-dev": {
